Add button to draw a new canvas

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <div id = "container">
 
     </div>
-    
+    <label for="width">Enter Grid Size (100x100 max) :</label>
+    <input type="text" maxlength="3" id ='width'>
+    <button class="button" id ='btn'>New Grid</button>
 
 </body>
 <script src="main.js"></script>
